Use Jinja2 for prompt templating

--- a/llamda/prompts/ga/hsevo/user_flash_reflection.j2
+++ b/llamda/prompts/ga/hsevo/user_flash_reflection.j2
@@ -1,6 +1,6 @@
 ### List heuristics
 Below is a list of design heuristics ranked from best to worst.
-{lst_method}
+{{ lst_method }}
 
 ### Guide
 - Keep in mind, list of design heuristics ranked from best to worst. Meaning the first function in the list is the best and the last function in the list is the worst.
