--- a/llamda/prompts/ga/hsevo/harmony_search.j2
+++ b/llamda/prompts/ga/hsevo/harmony_search.j2
@@ -1,5 +1,5 @@
 [code]
-{code_extract}
+{{ code_extract }}
 
 Now extract all threshold, weight or hardcode variable of the function make it become default parameters and give me a 'parameter_ranges' dictionary representation. Key of dict is name of variable. Value of key is a tuple in Python MUST include 2 float elements, first element is begin value, second element is end value corresponding with parameter.
 
